# bkflow-dmn

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  release.md
bkflow_dmn/: api.py  data_model.py  exception.py  hit_policy.py
tests/: data.py  test_single_table_decision.py
